# dog-breed-model

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt
src/backend/: app.py  dockerfile  requirements.txt  test_api.py  test_script.sh  test_ui.html
src/data_collection/: organizer.py
src/deployment/: cloudbuild.yaml
src/modeling/: model.py
